<resources>
    <string name="app_name">iChat</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="host">Địa chỉ IP máy chủ</string>
    <string name="port">Cổng chat</string>
    <string name="username">Tên đăng nhập</string>
    <string name="avatar">Ảnh đại diện</string>
    <string name="login">Đăng nhập</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Thoát</string>
    <string name="password">Mật khẩu</string>
    <string name="register">Tạo tài khoản</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
</resources>